# vidsrc-dlp

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml
moviefinder/: __init__.py  cli.py  config.py  downloader.py  resolver.py  tmdb.py  utils.py
vidsrc_dlp/: __init__.py  cli.py  config.py  downloader.py  resolver.py  tmdb.py  utils.py
vidsrc_dlp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
